styles.css
/* ... */
.nedshfcolumnswithcontent .nedshfleftcolumn,
.nedshfcolumnswithcontent .nedshfmiddlecolumn,
.nedshfcolumnswithcontent .nedshfrightcolumn {
    line-height: 38px;
    max-height: 38px;
}

.nedshfcolumnswithcontent .nedshfleftcolumn span,
.nedshfcolumnswithcontent .nedshfmiddlecolumn span,
.nedshfcolumnswithcontent .nedshfrightcolumn span {
    display: block;
    font-size: 16px;
}

.nedshfcolumnswithcontent .nedshfmiddlecolumn span.nedshfmiddlecolumnlarge {
    font-size: 20px;
}

.nedshfleftcolumn,
.nedshfmiddlecolumn,
.nedshfrightcolumn {
    display: block;
    float: left;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.nedshfleftcolumn,
.nedshfrightcolumn {
    width: 25%;
}

.nedshfleftcolumn {
    text-align: left;
}

.nedshfmiddlecolumn {
    text-align: center;
    width: 50%;
}

.nedshfrightcolumn {
    text-align: right;
}

#id_shfcleftcolumn,
#id_shfcmiddlecolumn,
#id_shfcrightcolumn {
    display: none;
}

/* NED Edit settings. */
.nedhfeditcolumns {
    display: flex;
    width: 100%;
}

.nedhfeditcolumn {
    display: inline-flex;
    margin: 0 4px;
    width: 100%;
}

.mform .form-inline .nedhfeditcolumnvalue .form-control {
    width: 100%;
}

.nedhfeditcolumnvalue input {
    width: 90%;
}

.nedhfeditcolumn input[type="checkbox"] {
    vertical-align: bottom;
}

/* Section edit form. */
.nedshfeditcolumns {
    width: 100%;
}

.nedshfeditleftcolumn,
.nedshfeditmiddlecolumn,
.nedshfeditrightcolumn {
    display: block;
    float: left;
    width: 33.3%;
}

@media (max-width: 1199px) {
    #fgroup_id_sectionheaderformatnamevaluesgroup fieldset {
        width: 100% !important;
    }
}

#sectionnamenavblock > div {
    display: inline-block;
}

#sectionnamenavblockvalue {
    padding-left: 10px;
    vertical-align: super;
}

/* Colour presets */
#page-course-format-ned-nedsettings #managecolourpresets > div {
    display: inline-block;
}

#page-course-format-ned-nedsettings #managecolourpresets > #cpappliesto {
    margin-left: 10px;
    vertical-align: text-bottom;
}

/* Activity / Resource hover */
.format-ned .nedactresmouseover .activity:hover:not(.label) .activityinstance,
.format-ned .nedactresmouseover .activity:hover:not(.label) .contentwithoutlink {
    font-size: 18px;
    line-height: 30px;
    padding-top: 10px !important;
}

.format-ned .nedactresmouseover .activity:hover:not(.label) .activityinstance a,
.format-ned .nedactresmouseover .activity:hover:not(.label) .contentwithoutlink a {
    vertical-align: middle;
}

.course-content ul.ned.nedactresmouseover li.section .activity.completion-background:hover:not(.label) .actions {
    top: 14px;
}

/* Relocate activity description */
.section .activity .contentafterlink.nedaboveicon,
.section .activity.completion-background .contentafterlink.nedaboveicon {
    margin-left: 0;
}

.section .activity .actions.nediconsbottom {
    bottom: 0;
    top: auto;
}

.course-content ul.ned li.section .activity.completion-background .actions.nediconsbottom {
    bottom: 7px;
    top: auto;
}

/* Editing toggle all. */
.nedsectionmenu {
    margin-bottom: 12px;
    text-align: right;
}

.nedsectionmenu div,
.nedsectionmenu a {
    display: inline-block;
}

.nedsectionmenu span {
    margin-left: 4px;
}

ul.nededitingsection li.section .content .section,
ul.nededitingsection li.section .content .addresourcemodchooser {
    display: none;
}

ul.nededitingsection li.section .left .nededitingsectionpix {
    background-position: center;
    background-repeat: no-repeat;
    cursor: pointer;
    display: block;
    height: 24px;
    width: 40px;
}

ul.nededitingsection li.section.closed .left .nededitingsectionpix {
    background-image: url([[pix:format_ned|point_right]]);
}

ul.nededitingsection li.section.open .left .nededitingsectionpix {
    background-image: url([[pix:format_ned|point_down]]);
}

ul.ned.nededitingsection li.section .left,
ul.ned.nededitingsection li.section .right {
    padding: 0;
}

.editing ul.ned.ned-framedsections-s0 li.section .left,
.editing ul.ned.ned-framedsections li.section .left {
    text-align: center;
}

.editing .course-content ul.ned li.section .left .section-handle .icon {
    margin-left: 0;
}

/* Framed sections with section 0 */
.editing .course-content ul.ned-framedsections li.section.main {
    position: relative;
}

.editing .course-content ul.ned-framedsections li.section .left,
.editing .course-content ul.ned-framedsections li.section .nedrightside,
.editing .course-content ul.ned-framedsections-s0 li.section .nedrightside {
    position: absolute;
    top: 0;
}

.editing .course-content ul.ned-framedsections li.section .nedrightside,
.editing .course-content ul.ned-framedsections-s0 li.section .nedrightside {
    right: 0;
}

.editing .course-content ul.ned-framedsections-s0 li.section .content {
    border-color: #999;
    border-style: solid;
}
.editing .course-content ul.ned-framedsections-s0 li.section.closed .content {
    border-width: 1px;
    min-height: 36px;
    padding-left: 27px;
    padding-right: 27px;
}
.editing .course-content ul.ned-framedsections-s0 li.section.open .content {
    border-width: 3px;
}

body:not(.editing) .course-content ul.ned-framedsections-s0 li.section .content {
    margin: 0 3px;
}

/* Compressed mode view */
.compressedmodeviewhide .compressedmodeviewhideformat {
    color: #999;
    text-align: center;
}

.compressedmodeviewhide .summary {
    display: none;
}

